--- a/store.html
+++ b/store.html
@@ -234,29 +234,10 @@
             </div>
           </div>
 
-          <div class="latest-card">
-            <div class="latest-card__text">
-              <div class="l-card-t__addinfo"></div>
-              <div class="l-card-t__name"></div>
-              <div class="l-card-t__price"></div>
-            </div>
-          </div>
-
-          <div class="latest-card">
-            <div class="latest-card__text">
-              <div class="l-card-t__addinfo"></div>
-              <div class="l-card-t__name"></div>
-              <div class="l-card-t__price"></div>
-            </div>
-          </div>
-
-          <div class="latest-card">
-            <div class="latest-card__text">
-              <div class="l-card-t__addinfo"></div>
-              <div class="l-card-t__name"></div>
-              <div class="l-card-t__price"></div>
-            </div>
-          </div>
+          <!-- blank cards -->
+          <div class="latest-card"></div>
+          <div class="latest-card"></div>
+          <div class="latest-card"></div>
         </div>
       </section>
 
@@ -355,23 +336,9 @@
             </div>
           </div>
 
-          <div class="personalization-card">
-            <img class="personalization-card__img" />
-            <div class="personalization-card__text">
-              <div class="p-card-t__addinfo"></div>
-              <div class="p-card-t__name"></div>
-              <div class="p-card-t__price"></div>
-            </div>
-          </div>
-
-          <div class="personalization-card">
-            <img class="personalization-card__img" />
-            <div class="personalization-card__text">
-              <div class="p-card-t__addinfo"></div>
-              <div class="p-card-t__name"></div>
-              <div class="p-card-t__price"></div>
-            </div>
-          </div>
+          <!-- blank cards-->
+          <div class="personalization-card"></div>
+          <div class="personalization-card"></div>
         </div>
       </section>
 
@@ -384,22 +351,30 @@
         <div class="holiday-cards-scroller">
           <!-- Surprise your favorites -->
           <div class="holiday-card1st">
-            <img class="holiday-card1st__img" />
+            <img
+              src="images-store/holi-favorites.png"
+              class="holiday-card1st__img"
+            />
             <div class="holiday-card1st__slogan">
-              Surprise your favorites with these favorites.
+              Surprise your favorites<br />
+              with these favorites.
             </div>
           </div>
 
           <!-- iPhone 16 Silicone Case  -->
           <div class="holiday-card">
-            <img class="holiday-card__img" />
+            <img
+              src="images-store/holi-silicone-case.png"
+              class="holiday-card__img"
+            />
             <div class="holiday-card__colorbox">
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
+              <img src="images-store/holi-silicase-col1.svg" class="color" />
+              <img src="images-store/holi-silicase-col2.svg" class="color" />
+              <img src="images-store/holi-silicase-col3.svg" class="color" />
+              <img src="images-store/holi-silicase-col4.svg" class="color" />
+              <img src="images-store/holi-silicase-col5.svg" class="color" />
+              <img src="images-store/holi-silicase-col6.svg" class="color" />
+              <img src="images-store/holi-silicase-vector.svg" />
             </div>
             <div class="holiday-card__text">
               <div class="h-card-t__addinfo">New</div>
@@ -411,14 +386,20 @@
           </div>
 
           <!-- HomePod mini -->
-          <div class="holiday-card">
-            <img class="holiday-card__img" />
+          <div class="holiday-card homepod-mini">
+            <img
+              src="images-store/holi-homepod-mini.png"
+              class="holiday-card__img"
+            />
             <div class="holiday-card__colorbox">
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
+              <img src="images-store/holi-homepod-1blue.svg" class="color" />
+              <img src="images-store/holi-homepod-2yellow.svg" class="color" />
+              <img
+                src="images-store/holi-homepod-3midnight.svg"
+                class="color"
+              />
+              <img src="images-store/holi-homepod-4orange.svg" class="color" />
+              <img src="images-store/holi-homepod-5white.svg" class="color" />
             </div>
             <div class="holiday-card__text">
               <div class="h-card-t__name">HomePod mini - White</div>
@@ -427,13 +408,16 @@
           </div>
 
           <!-- Smart Folio for iPad -->
-          <div class="holiday-card">
-            <img class="holiday-card__img" />
+          <div class="holiday-card smart-folio">
+            <img
+              src="images-store/holi-smart-folio.png"
+              class="holiday-card__img"
+            />
             <div class="holiday-card__colorbox">
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
+              <img src="images-store/holi-smartfolio-col1.svg" class="color" />
+              <img src="images-store/holi-smartfolio-col2.svg" class="color" />
+              <img src="images-store/holi-smartfolio-col3.svg" class="color" />
+              <img src="images-store/holi-smartfolio-col4.svg" class="color" />
             </div>
             <div class="holiday-card__text">
               <div class="h-card-t__name">
@@ -444,12 +428,15 @@
           </div>
 
           <!-- Beats Solo Wireless Headphones -->
-          <div class="holiday-card">
-            <img class="holiday-card__img" />
+          <div class="holiday-card wireless-headphones">
+            <img
+              src="images-store/holi-wireless-headphones.png"
+              class="holiday-card__img"
+            />
             <div class="holiday-card__colorbox">
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
+              <img src="images-store/holi-wirelesshp-col1.svg" class="color" />
+              <img src="images-store/holi-wirelesshp-col2.svg" class="color" />
+              <img src="images-store/holi-wirelesshp-col3.svg" class="color" />
             </div>
             <div class="holiday-card__text">
               <div class="h-card-t__addinfo">New</div>
@@ -460,9 +447,65 @@
             </div>
           </div>
 
+          <!-- blank cards -->
           <div class="holiday-card"></div>
+          <div class="holiday-card"></div>
+        </div>
+      </section>
 
-          <div class="holiday-card"></div>
+      <!-- Only at Apple -->
+      <section class="onlyapple-container">
+        <div class="container-heading">
+          <span>Only at Apple.</span> With you every step of the holiday
+        </div>
+        <div class="onlyapple-cards-scroller">
+          <div class="onlyapple-card">
+            <img class="onlyapple-card__img" />
+            <div class="onlyapple-card__description">
+              Get gifts in time for the holidays with two hour delivery,² free
+              delivery,or easy pickup.
+            </div>
+          </div>
+
+          <div class="onlyapple-card2nd">
+            <div class="onlyapple-card2nd__inbox">
+              Customize your Mac and create your own style of Apple Watch.
+            </div>
+            <div class="onlyapple-card2nd__inbox">
+              Pay in full or pay over time. Your choice.
+            </div>
+          </div>
+
+          <div class="onlyapple-card2nd">
+            <div class="onlyapple-card2nd__inbox">
+              Free extended returns between now and 1/8/25.
+            </div>
+            <div class="onlyapple-card2nd__inbox">
+              Make them yours. Engrave a mix of emoji, names, and numbers for
+              free.
+            </div>
+          </div>
+
+          <div class="onlyapple-card">
+            <img class="onlyapple-card__img" />
+            <div class="onlyapple-card__title">APPLE TRADE IN</div>
+            <div class="onlyapple-card__description">
+              Trade in your current device. Get credit toward a new one.³
+            </div>
+          </div>
+
+          <div class="onlyapple-card">
+            <img class="onlyapple-card__img" />
+            <div class="onlyapple-card__title">APPLE SPECIALIST</div>
+            <div class="onlyapple-card__description">
+              Find gifts with an Apple Specialist in a store or online.
+            </div>
+          </div>
+
+          <!-- blank cards -->
+          <div class="onlyapple-card"></div>
+          <div class="onlyapple-card"></div>
+          <div class="onlyapple-card"></div>
         </div>
       </section>
     </main>
