only apple ended and start from exp

--- a/store.html
+++ b/store.html
@@ -60,7 +60,7 @@
       <!-- Store -->
       <section class="store-container">
         <div class="store__heading">
-          <span class="store-heading-span">Store.</span> Gift magic
+          <span class="store-heading-span">Store. </span> Gift magic
           this holiday.
         </div>
         <div>
@@ -162,7 +162,7 @@
       <!-- The latest -->
       <section class="latest-container">
         <div class="container-heading">
-          <span>The latest.</span> Let them unwrap wonders.
+          <span>The latest. </span> Let them unwrap wonders.
         </div>
 
         <div class="latest-cards-scroller">
@@ -238,13 +238,14 @@
           <div class="latest-card"></div>
           <div class="latest-card"></div>
           <div class="latest-card"></div>
+          <div class="latest-card"></div>
         </div>
       </section>
 
       <!-- Personalization -->
       <section class="personalization-container">
         <div class="container-heading">
-          <span>Personalization.</span> Let them unwrap wonders.
+          <span>Personalization. </span> Let them unwrap wonders.
         </div>
 
         <div class="personalization-cards-scroller">
@@ -339,13 +340,14 @@
           <!-- blank cards-->
           <div class="personalization-card"></div>
           <div class="personalization-card"></div>
+          <div class="personalization-card"></div>
         </div>
       </section>
 
       <!-- Holiday Picks -->
       <section class="holiday-container">
         <div class="container-heading">
-          <span>Holiday Picks.</span> Add more magic to the moment.
+          <span>Holiday Picks. </span> Add more magic to the moment.
         </div>
 
         <div class="holiday-cards-scroller">
@@ -450,62 +452,154 @@
           <!-- blank cards -->
           <div class="holiday-card"></div>
           <div class="holiday-card"></div>
+          <div class="holiday-card"></div>
         </div>
       </section>
 
       <!-- Only at Apple -->
       <section class="onlyapple-container">
         <div class="container-heading">
-          <span>Only at Apple.</span> With you every step of the holiday
+          <span>Only at Apple. </span> With you every step of the holiday
         </div>
         <div class="onlyapple-cards-scroller">
-          <div class="onlyapple-card">
-            <img class="onlyapple-card__img" />
-            <div class="onlyapple-card__description">
-              Get gifts in time for the holidays with two hour delivery,² free
-              delivery,or easy pickup.
+          <!-- Get gifts -->
+          <div class="onlyapple-card get-gifts">
+            <img
+              src="images-store/onlyapple-gift.png"
+              class="onlyapple-card__img"
+            />
+            <div class="onlyapple-card__text">
+              <div class="o-card-t__description">
+                Get gifts in time for the<br />
+                holidays with two hour<br />
+                delivery,² free<br />
+                delivery,or easy pickup.
+              </div>
             </div>
           </div>
 
+          <!-- card2nd -->
           <div class="onlyapple-card2nd">
-            <div class="onlyapple-card2nd__inbox">
+            <div
+              class="onlyapple-card2nd__in-box onlyapple-card2nd__in-box--customize"
+            >
               Customize your Mac and create your own style of Apple Watch.
             </div>
-            <div class="onlyapple-card2nd__inbox">
-              Pay in full or pay over time. Your choice.
+            <div
+              class="onlyapple-card2nd__in-box onlyapple-card2nd__in-box--free-returns"
+            >
+              Free extended<br />
+              returns between now<br />
+              and 1/8/25.
+            </div>
+            <div
+              class="onlyapple-card2nd__in-box onlyapple-card2nd__in-box--pay-full"
+            >
+              Pay in full or pay<br />
+              over time. Your choice.
+            </div>
+            <div
+              class="onlyapple-card2nd__in-box onlyapple-card2nd__in-box--engrave"
+            >
+              Make them yours. Engrave a mix of<br />
+              emoji, names, and numbers for free.
             </div>
           </div>
 
-          <div class="onlyapple-card2nd">
-            <div class="onlyapple-card2nd__inbox">
-              Free extended returns between now and 1/8/25.
-            </div>
-            <div class="onlyapple-card2nd__inbox">
-              Make them yours. Engrave a mix of emoji, names, and numbers for
-              free.
-            </div>
-          </div>
-
-          <div class="onlyapple-card">
-            <img class="onlyapple-card__img" />
-            <div class="onlyapple-card__title">APPLE TRADE IN</div>
-            <div class="onlyapple-card__description">
-              Trade in your current device. Get credit toward a new one.³
+          <!-- Trade in -->
+          <div class="onlyapple-card trade-in">
+            <img
+              src="images-store/onlyapple-trade-in.png"
+              class="onlyapple-card__img"
+            />
+            <div class="onlyapple-card__text">
+              <div class="o-card-t__title">APPLE TRADE IN</div>
+              <div class="o-card-t__description">
+                Trade in your current<br />
+                device. Get credit toward a<br />
+                new one.³
+              </div>
             </div>
           </div>
 
-          <div class="onlyapple-card">
-            <img class="onlyapple-card__img" />
-            <div class="onlyapple-card__title">APPLE SPECIALIST</div>
-            <div class="onlyapple-card__description">
-              Find gifts with an Apple Specialist in a store or online.
+          <!-- Specialist -->
+          <div class="onlyapple-card specialist">
+            <img
+              src="images-store/onlyapple-specialist.jpg"
+              class="onlyapple-card__img"
+            />
+            <div class="onlyapple-card__text">
+              <div class="o-card-t__title">APPLE SPECIALIST</div>
+              <div class="o-card-t__description">
+                Find gifts with an Apple<br />
+                Specialist in a store or online.
+              </div>
             </div>
           </div>
 
           <!-- blank cards -->
           <div class="onlyapple-card"></div>
-          <div class="onlyapple-card"></div>
-          <div class="onlyapple-card"></div>
+        </div>
+      </section>
+
+      <!-- The Apple Experience -->
+      <section class="experience-container">
+        <div class="container-heading">
+          <span>The Apple Experience. </span> Even more awe in store.
+        </div>
+        <div class="experience-cards-scroller">
+          <!-- APPLE MUSIC -->
+          <div class="experience-card">
+            <img
+              src="images-store/exp-music-free.png"
+              class="experience-card__img"
+            />
+            <div class="experience-card__text">
+              <div class="e-card-t__title"></div>
+              <div class="e-card-t__description"></div>
+              <div class="e-card-t__addinfo"></div>
+            </div>
+          </div>
+
+          <!-- APPLE TV+ -->
+          <div class="experience-card">
+            <img
+              src="images-store/exp-tv-free.png"
+              class="experience-card__img"
+            />
+            <div class="experience-card__text">
+              <div class="e-card-t__title"></div>
+              <div class="e-card-t__description"></div>
+            </div>
+          </div>
+
+          <!-- Six services one subscription -->
+          <div class="experience-card">
+            <img
+              src="images-store/exp-subscription.png"
+              class="experience-card__img"
+            />
+            <div class="experience-card__text">
+              <div class="e-card-t__description"></div>
+            </div>
+          </div>
+
+          <!-- AI New features -->
+          <div class="experience-card">
+            <img
+              src="images-store/exp-ai-features.jpg"
+              class="experience-card__img"
+            />
+            <div class="experience-card__text">
+              <div class="e-card-t__title"></div>
+              <div class="e-card-t__description"></div>
+            </div>
+          </div>
+
+          <!-- blank cards -->
+          <div class="experience-card"></div>
+          <div class="experience-card"></div>
+          <div class="experience-card"></div>
         </div>
       </section>
     </main>
