--- a/store.html
+++ b/store.html
@@ -463,7 +463,7 @@
         </div>
         <div class="onlyapple-cards-scroller">
           <!-- Get gifts -->
-          <div class="onlyapple-card get-gifts">
+          <div class="onlyapple-card">
             <img
               src="images-store/onlyapple-gift.png"
               class="onlyapple-card__img"
@@ -555,32 +555,44 @@
               class="experience-card__img"
             />
             <div class="experience-card__text">
-              <div class="e-card-t__title"></div>
-              <div class="e-card-t__description"></div>
-              <div class="e-card-t__addinfo"></div>
+              <div class="e-card-t__title">APPLE MUSIC</div>
+              <div class="e-card-t__description">
+                Get 3 months of<br />
+                Apple Music free.
+              </div>
+              <div class="e-card-t__addinfo">
+                Included with the purchase of<br />
+                select Apple devices.
+              </div>
             </div>
           </div>
 
           <!-- APPLE TV+ -->
-          <div class="experience-card">
+          <div class="experience-card free-tv">
             <img
               src="images-store/exp-tv-free.png"
               class="experience-card__img"
             />
             <div class="experience-card__text">
-              <div class="e-card-t__title"></div>
-              <div class="e-card-t__description"></div>
+              <div class="e-card-t__title">APPLE TV+</div>
+              <div class="e-card-t__description">
+                Get 3 months free when you<br />
+                buy an Apple device.
+              </div>
             </div>
           </div>
 
           <!-- Six services one subscription -->
-          <div class="experience-card">
+          <div class="experience-card services-subscription">
             <img
               src="images-store/exp-subscription.png"
               class="experience-card__img"
             />
             <div class="experience-card__text">
-              <div class="e-card-t__description"></div>
+              <div class="e-card-t__description">
+                Six Apple services.<br />
+                One easy subscription.
+              </div>
             </div>
           </div>
 
@@ -591,8 +603,12 @@
               class="experience-card__img"
             />
             <div class="experience-card__text">
-              <div class="e-card-t__title"></div>
-              <div class="e-card-t__description"></div>
+              <div class="e-card-t__title">APPLE INTELLIGENCE</div>
+              <div class="e-card-t__description">
+                New features for writing,<br />
+                focus,communication, and<br />
+                more.
+              </div>
             </div>
           </div>
 
@@ -600,6 +616,107 @@
           <div class="experience-card"></div>
           <div class="experience-card"></div>
           <div class="experience-card"></div>
+        </div>
+      </section>
+
+      <!-- Special Savings -->
+      <section class="savings-container">
+        <div class="container-heading">
+          <span>Special Savings. </span> iPhone carrier deals and exclusive
+          savings for school,<br />
+          businesses, and more.
+        </div>
+        <div class="savings-cards-scroller">
+          <!-- CARRIER DEALS -->
+          <div class="savings-card">
+            <img src="images-store/sav-carrier.png" class="savings-card__img" />
+            <div class="savings-card__text">
+              <div class="s-card-t__title">CARRIER DEALS</div>
+              <div class="s-card-t__description">
+                Apple. Your one‑stop<br />
+                shop for incredible carrier deals.
+              </div>
+              <div class="s-card-t__addinfo">
+                Get up to $1000 in credit on a new<br />
+                iPhone with AT&T, Boost Mobile,<br />
+                T‑Mobile, or Verizon. Trade‑in may be required.⁴
+              </div>
+            </div>
+          </div>
+
+          <!-- EDUCATION -->
+          <div class="savings-card">
+            <img
+              src="images-store/sav-education.png"
+              class="savings-card__img"
+            />
+            <div class="savings-card__text">
+              <div class="s-card-t__title">EDUCATION</div>
+              <div class="s-card-t__description">
+                Buy a new Mac or iPad<br />
+                with education savings.
+              </div>
+            </div>
+          </div>
+
+          <!-- CERTIFIED REFURBISHED -->
+          <div class="savings-card">
+            <img
+              src="images-store/sav-certified.png"
+              class="savings-card__img"
+            />
+            <div class="savings-card__text">
+              <div class="s-card-t__title">CERTIFIED REFURBISHED</div>
+              <div class="s-card-t__description">
+                Shop refurbished Apple products backed by a one‑year warranty.
+              </div>
+            </div>
+          </div>
+
+          <!-- BUSINESS -->
+          <div class="savings-card">
+            <img
+              src="images-store/sav-business.png"
+              class="savings-card__img"
+            />
+            <div class="savings-card__text business">
+              <div class="s-card-t__title">BUSINESS</div>
+              <div class="s-card-t__description">
+                From enterprise to<br />
+                small business, we’ll<br />
+                work with you.
+              </div>
+            </div>
+          </div>
+
+          <!-- GOVERNMENT -->
+          <div class="savings-card">
+            <img
+              src="images-store/sav-government.jpg"
+              class="savings-card__img"
+            />
+            <div class="savings-card__text">
+              <div class="s-card-t__title">GOVERNMENT</div>
+              <div class="s-card-t__description">
+                Special pricing is available for state, local, and federal
+                agencies.
+              </div>
+            </div>
+          </div>
+
+          <!-- blank cards -->
+          <div class="savings-card"></div>
+        </div>
+      </section>
+
+      <!-- Quick Links -->
+      <section class="links-container">
+        <div class="links__heading">Quick Links</div>
+        <div class="links__buttons">
+          <a href="-" class="btn">Order Status</a>
+          <a href="-" class="btn">Shopping Help</a>
+          <a href="-" class="btn">Returns</a>
+          <a href="-" class="btn">Your Saves</a>
         </div>
       </section>
     </main>
