apple main page animation
last 2 parts
atv animation revise
acontent animation revise

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </nav>
 
         <div class="header-buttons">
-          <button class="btn">
+          <button class="btn btn-search">
             <img src="images/header-search.svg" />
           </button>
-          <button class="btn">
+          <button class="btn btn-bag">
             <img src="images/header-bag.svg" />
           </button>
           <button class="btn btn-menu">
@@ -133,7 +133,7 @@
 
         <!-- WATCH -->
         <div class="a-product a-product--watch">
-          <div class="a-product__title">WATCH</div>
+          <div class="a-product__title">Watch</div>
           <div class="a-product__midtitle">SERIES 10</div>
           <div class="a-product__subtitle">Thinstant classic.</div>
           <div class="a-product__buttons">
