--- a/store.html
+++ b/store.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Store</title>
+
     <link rel="stylesheet" href="main.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -66,7 +69,7 @@
         <div>
           <div class="store-question qbox1">
             <img
-              src="images-store/head-Q-icon.svg"
+              src="images-store/storeQ-icon.svg"
               class="store-question__img"
             />
             <div class="store-question__text">
@@ -577,7 +580,7 @@
               <div class="e-card-t__title">APPLE TV+</div>
               <div class="e-card-t__description">
                 Get 3 months free when you<br />
-                buy an Apple device.
+                buy an Apple device.++
               </div>
             </div>
           </div>
