--- a/store.html
+++ b/store.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanuman:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main class="store">
@@ -177,8 +181,7 @@
             />
             <div class="latest-card__text">
               <div class="l-card-t__addinfo">
-                APPLE INTELLIGENCE
-                <sup>∆</sup>
+                APPLE INTELLIGENCE<span>∆</span>
               </div>
               <div class="l-card-t__name">iPhone 16 Pro</div>
               <div class="l-card-t__price">
@@ -209,8 +212,7 @@
             />
             <div class="latest-card__text">
               <div class="l-card-t__addinfo">
-                APPLE INTELLIGENCE
-                <sup>∆</sup>
+                APPLE INTELLIGENCE<span>∆</span>
               </div>
               <div class="l-card-t__name">iPad mini</div>
               <div class="l-card-t__price">
@@ -227,8 +229,7 @@
             />
             <div class="latest-card__text">
               <div class="l-card-t__addinfo">
-                APPLE INTELLIGENCE
-                <sup>∆</sup>
+                APPLE INTELLIGENCE<span>∆</span>
               </div>
               <div class="l-card-t__name">MacBook Pro</div>
               <div class="l-card-t__price">
@@ -265,11 +266,11 @@
           </div>
 
           <!-- AirPods Max - Purple -->
-          <div class="personalization-card">
-            <img
-              src="images-store/persona-airpods-max.png"
-              class="personalization-card__img"
-            />
+          <div class="personalization-card airpods-max">
+            <div class="personalization-card__imgbox">
+              <img src="images-store/persona-airpods-max.png" />
+            </div>
+
             <div class="personalization-card__colorbox">
               <img
                 src="images-store/persona-airpods-max-1blue.svg"
@@ -301,10 +302,10 @@
 
           <!-- AirPods Pro 2 -->
           <div class="personalization-card airpods-pro2">
-            <img
-              src="images-store/persona-airpods-pro-2.png"
-              class="personalization-card__img"
-            />
+            <div class="personalization-card__imgbox">
+              <img src="images-store/persona-airpods-pro-2.png" />
+            </div>
+
             <div class="personalization-card__text">
               <div class="p-card-t__addinfo">Free Engraving</div>
               <div class="p-card-t__name">AirPods Pro 2</div>
@@ -314,10 +315,10 @@
 
           <!-- AirPods 4 -->
           <div class="personalization-card airpods-4">
-            <img
-              src="images-store/persona-airpods-4.png"
-              class="personalization-card__img"
-            />
+            <div class="personalization-card__imgbox">
+              <img src="images-store/persona-airpods-4.png" />
+            </div>
+
             <div class="personalization-card__text">
               <div class="p-card-t__addinfo">Free Engraving</div>
               <div class="p-card-t__name">
@@ -329,10 +330,10 @@
 
           <!-- Apple Pencil Pro -->
           <div class="personalization-card pencil-pro">
-            <img
-              src="images-store/persona-pencil-pro.png"
-              class="personalization-card__img"
-            />
+            <div class="personalization-card__imgbox">
+              <img src="images-store/persona-pencil-pro.png" />
+            </div>
+
             <div class="personalization-card__text">
               <div class="p-card-t__addinfo">New</div>
               <div class="p-card-t__name">Apple Pencil Pro</div>
@@ -368,10 +369,10 @@
 
           <!-- iPhone 16 Silicone Case  -->
           <div class="holiday-card">
-            <img
-              src="images-store/holi-silicone-case.png"
-              class="holiday-card__img"
-            />
+            <div class="holiday-card__imgbox">
+              <img src="images-store/holi-silicone-case.png" />
+            </div>
+
             <div class="holiday-card__colorbox">
               <img src="images-store/holi-silicase-col1.svg" class="color" />
               <img src="images-store/holi-silicase-col2.svg" class="color" />
@@ -381,6 +382,7 @@
               <img src="images-store/holi-silicase-col6.svg" class="color" />
               <img src="images-store/holi-silicase-vector.svg" />
             </div>
+
             <div class="holiday-card__text">
               <div class="h-card-t__addinfo">New</div>
               <div class="h-card-t__name">
@@ -392,10 +394,10 @@
 
           <!-- HomePod mini -->
           <div class="holiday-card homepod-mini">
-            <img
-              src="images-store/holi-homepod-mini.png"
-              class="holiday-card__img"
-            />
+            <div class="holiday-card__imgbox">
+              <img src="images-store/holi-homepod-mini.png" />
+            </div>
+
             <div class="holiday-card__colorbox">
               <img src="images-store/holi-homepod-1blue.svg" class="color" />
               <img src="images-store/holi-homepod-2yellow.svg" class="color" />
@@ -406,6 +408,7 @@
               <img src="images-store/holi-homepod-4orange.svg" class="color" />
               <img src="images-store/holi-homepod-5white.svg" class="color" />
             </div>
+
             <div class="holiday-card__text">
               <div class="h-card-t__name">HomePod mini - White</div>
               <div class="h-card-t__price">$99.00</div>
@@ -414,10 +417,10 @@
 
           <!-- Smart Folio for iPad -->
           <div class="holiday-card smart-folio">
-            <img
-              src="images-store/holi-smart-folio.png"
-              class="holiday-card__img"
-            />
+            <div class="holiday-card__imgbox">
+              <img src="images-store/holi-smart-folio.png" />
+            </div>
+
             <div class="holiday-card__colorbox">
               <img src="images-store/holi-smartfolio-col1.svg" class="color" />
               <img src="images-store/holi-smartfolio-col2.svg" class="color" />
@@ -434,15 +437,16 @@
 
           <!-- Beats Solo Wireless Headphones -->
           <div class="holiday-card wireless-headphones">
-            <img
-              src="images-store/holi-wireless-headphones.png"
-              class="holiday-card__img"
-            />
+            <div class="holiday-card__imgbox">
+              <img src="images-store/holi-wireless-headphones.png" />
+            </div>
+
             <div class="holiday-card__colorbox">
               <img src="images-store/holi-wirelesshp-col1.svg" class="color" />
               <img src="images-store/holi-wirelesshp-col2.svg" class="color" />
               <img src="images-store/holi-wirelesshp-col3.svg" class="color" />
             </div>
+
             <div class="holiday-card__text">
               <div class="h-card-t__addinfo">New</div>
               <div class="h-card-t__name">
@@ -492,14 +496,14 @@
               class="onlyapple-card2nd__in-box onlyapple-card2nd__in-box--free-returns"
             >
               Free extended<br />
-              returns between now<br />
-              and 1/8/25.
+              returns between now and 1/8/25.
             </div>
             <div
               class="onlyapple-card2nd__in-box onlyapple-card2nd__in-box--pay-full"
             >
               Pay in full or pay<br />
-              over time. Your choice.
+              over time. Your<br />
+              choice.
             </div>
             <div
               class="onlyapple-card2nd__in-box onlyapple-card2nd__in-box--engrave"
@@ -580,7 +584,7 @@
               <div class="e-card-t__title">APPLE TV+</div>
               <div class="e-card-t__description">
                 Get 3 months free when you<br />
-                buy an Apple device.++
+                buy an Apple device.
               </div>
             </div>
           </div>
@@ -608,8 +612,7 @@
             <div class="experience-card__text">
               <div class="e-card-t__title">APPLE INTELLIGENCE</div>
               <div class="e-card-t__description">
-                New features for writing,<br />
-                focus,communication, and<br />
+                New features for writing, focus,communication, and<br />
                 more.
               </div>
             </div>
@@ -716,10 +719,10 @@
       <section class="links-container">
         <div class="links__heading">Quick Links</div>
         <div class="links__buttons">
-          <a href="-" class="btn">Order Status</a>
-          <a href="-" class="btn">Shopping Help</a>
-          <a href="-" class="btn">Returns</a>
-          <a href="-" class="btn">Your Saves</a>
+          <button class="btn">Order Status</button>
+          <button class="btn">Shopping Help</button>
+          <button class="btn">Returns</button>
+          <button class="btn">Your Saves</button>
         </div>
       </section>
     </main>
