--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </a>
 
         <nav class="header-nav">
-          <a href="store.html" class="item">Store</a>
+          <a href="store.html" class="item item-store">Store </a>
           <a href="-" class="item">Mac</a>
           <a href="-" class="item">iPad</a>
           <a href="-" class="item">iPhone</a>
@@ -330,42 +330,56 @@
               <div class="acontent-slide__title">
                 Improve Your Posture wicth Pilates
               </div>
+              <div class="acontent-slide__shade"></div>
+              <button class="acontent-slide__shade-btn">Watch now</button>
             </div>
 
             <!-- acont2 -->
             <div class="acontent-slide acont2">
               <img src="images/acont2.png" class="acontent-slide__img" />
               <div class="acontent-slide__title">R&B Now</div>
+              <div class="acontent-slide__shade"></div>
+              <button class="acontent-slide__shade-btn">Listen now</button>
             </div>
 
             <!-- acont3 -->
             <div class="acontent-slide acont3">
               <img src="images/acont3.png" class="acontent-slide__img" />
               <div class="acontent-slide__title">NBA 2K25 Arcade Edition</div>
+              <div class="acontent-slide__shade"></div>
+              <button class="acontent-slide__shade-btn">Play now</button>
             </div>
 
             <!-- acont4 -->
             <div class="acontent-slide acont4">
               <img src="images/acont4.png" class="acontent-slide__img" />
               <div class="acontent-slide__title">Strength with Kim</div>
+              <div class="acontent-slide__shade"></div>
+              <button class="acontent-slide__shade-btn">Watch now</button>
             </div>
 
             <!-- acont5 -->
             <div class="acontent-slide acont5">
               <img src="images/acont5.jpg" class="acontent-slide__img" />
               <div class="acontent-slide__title"></div>
+              <div class="acontent-slide__shade"></div>
+              <button class="acontent-slide__shade-btn">Listen now</button>
             </div>
 
             <!-- acont6 -->
             <div class="acontent-slide acont6">
               <img src="images/acont6.mob.png" class="acontent-slide__img" />
               <div class="acontent-slide__title">La Oficial</div>
+              <div class="acontent-slide__shade"></div>
+              <button class="acontent-slide__shade-btn">Listen now</button>
             </div>
 
             <!-- acont7 -->
             <div class="acontent-slide acont7">
               <img src="images/acont7.mob.jpg" class="acontent-slide__img" />
               <div class="acontent-slide__title">Travel-Friendly Workouts</div>
+              <div class="acontent-slide__shade"></div>
+              <button class="acontent-slide__shade-btn">Watch now</button>
             </div>
           </div>
         </div>
