--- a/store.html
+++ b/store.html
@@ -80,7 +80,7 @@
 
           <div class="store-question qbox2">
             <img
-              src="images-store/head-Q-icon.svg"
+              src="images-store/storeQ-icon.svg"
               class="store-question__img"
             />
             <div class="store-question__text">
@@ -267,28 +267,24 @@
               <img src="images-store/persona-airpods-max.png" />
             </div>
 
-            <div class="personalization-card__colorbox">
-              <img
-                src="images-store/persona-airpods-max-1blue.svg"
-                class="color"
-              />
-              <img
-                src="images-store/persona-airpods-max-2purple.svg"
-                class="color"
-              />
-              <img
-                src="images-store/persona-airpods-max-3midnight.svg"
-                class="color"
-              />
-              <img
-                src="images-store/persona-airpods-max-4starlight.svg"
-                class="color"
-              />
-              <img
-                src="images-store/persona-airpods-max-5orange.svg"
-                class="color"
-              />
+            <div class="personalization-card__colorsbox">
+              <div class="color-box">
+                <img src="images-store/persona-airpods-max-1blue.svg" />
+              </div>
+              <div class="color-box">
+                <img src="images-store/persona-airpods-max-2purple.svg" />
+              </div>
+              <div class="color-box">
+                <img src="images-store/persona-airpods-max-3midnight.svg" />
+              </div>
+              <div class="color-box">
+                <img src="images-store/persona-airpods-max-4starlight.svg" />
+              </div>
+              <div class="color-box">
+                <img src="images-store/persona-airpods-max-5orange.svg" />
+              </div>
             </div>
+
             <div class="personalization-card__text">
               <div class="p-card-t__addinfo">Free Engraving</div>
               <div class="p-card-t__name">AirPods Max - Purple</div>
